--- a/style.css
+++ b/style.css
@@ -91,33 +91,29 @@ p7{
 
 .footer{
     background-color:#3882F6 ;
-    color: #e5e7eb ;
+    color: #f9faf8 ;
+    max-height: 200px;
     font-size: 20px;
     margin-top: 75px;
     margin-bottom: 75px;
     margin-left: 150px;
     margin-right: 150px;
     border-radius: 10px;
-    padding: 40px;
+    padding: 20px;
+    padding-bottom: 40px;
     display: flex;
     flex-direction:column;
-
 }
 h3{
     font-weight: bolder;
-}
-p8, p9{    
-}
-    
+}   
 .button2{
     max-width: 100px;
-display:flex;
 align-self: flex-end;
-justify-self: center;
 outline-color:#f9faf8;
 outline-width: thick;
 outline-style: solid;
+margin-top: -80px;
 padding: 20px;
 border-radius: 10px;
-
 }
