--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
     padding-right: 200px;   
 }
 a:link, a:visited{
-    text-decoration: none;
     color: #f9faf8;
     text-align-last: right;
+    
 }
 
 
@@ -118,9 +118,9 @@ h3{
     max-width: 100px;
 align-self: flex-end;
 outline-color:#f9faf8;
-outline-width: thin;
+outline-width: normal;
 outline-style: solid;
-box-shadow: 15px,20px;
+box-shadow: 25px,40px;
 margin-top: -80px;
 padding: 15px;
 border-radius: 10px;
